<resources>
    <!-- app -->
    <string name="all_done">All done</string>
    <string name="app_name">Pantry</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_done">Done</string>
    <string name="checkbox">checkbox is in pantry</string>
    <string name="go_to_shop">Go shopping at</string>
    <string name="hint_name">Fill out item name</string>
    <string name="hint_note">Add a note</string>
    <string name="label_category">Category:</string>
    <string name="label_in_pantry">Present in pantry</string>
    <string name="label_name">Name:</string>
    <string name="label_note">Note:</string>
    <string name="label_not_in_pantry">Not present in pantry</string>
    <string name="label_shop">Shop:</string>
    <string name="pantry_filled">Your pantry is filled!</string>
    <string name="placeholder_category" translatable="false">item category</string>
    <string name="placeholder_name" translatable="false">item name</string>
    <string name="placeholder_note" translatable="false">item note</string>
    <string name="placeholder_shop" translatable="false">item shop</string>
    <string name="required_name">Name is required</string>
    <string name="title_add_activity">Add item</string>
    <string name="title_detail_activity">Pantry item</string>
    <string name="title_main_activity">My pantry</string>

    <!-- app widget -->
    <string name="aw_overview_label">Products needed:</string>
    <string name="aw_placeholder_number" translatable="false">10</string>
    <string name="aw_placeholder_shop" translatable="false">Shop:</string>
    <string name="aw_title">Your pantry</string>

    <!-- category data -->
    <string name="cat_fruit" translatable="false">Fruit</string>
    <string name="cat_vegetables">Vegetables</string>
    <string name="cat_cheese">Cheese</string>
    <string name="cat_dairy">Dairy</string>
    <string name="cat_pasta">Pasta-Grains</string>
    <string name="cat_breakfast">Breakfast</string>
    <string name="cat_spices">Spices</string>
    <string name="cat_canned">Canned food</string>
    <string name="cat_sauces">Sauces</string>
    <string name="cat_frozen">Frozen food</string>
    <!-- item data -->
    <string name="item_fruit_bananas">Bananas</string>
    <string name="item_veg_onions">Onions</string>
    <string name="item_veg_garlic">Garlic</string>
    <string name="item_cheese_parmesan">Parmesan</string>
    <string name="item_dairy_s_milk">Soy milk</string>
    <string name="item_dairy_soy_cream">Soy cream</string>
    <string name="item_pasta_wheat">Wheat</string>
    <string name="item_pasta_bulgar">Bulgar</string>
    <string name="item_pasta_cous">Cous cous</string>
    <string name="item_pasta_noodles">Noodles</string>
    <string name="item_pasta_quinoa" translatable="false">Quinoa</string>
    <string name="item_pasta_cappellini" translatable="false">Cappellini</string>
    <string name="item_pasta_penne" translatable="false">Penne</string>
    <string name="item_pasta_lasagna">Lasagna</string>
    <string name="item_pasta_wholegrain">Wholegrain rice</string>
    <string name="item_pasta_arborio">Arborio rice</string>
    <string name="item_pasta_buckwheat">Buckwheat</string>
    <string name="item_breakfast_jam">Jam</string>
    <string name="item_breakfast_honey">Honey</string>
    <string name="item_breakfast_corn">Corn cakes</string>
    <string name="item_spices_salt">Salt</string>
    <string name="item_spices_w_pepper">White pepper</string>
    <string name="item_spices_b_pepper">Black pepper</string>
    <string name="item_spices_nutmeg">Nutmeg</string>
    <string name="item_canned_kidney">Kidney beans</string>
    <string name="item_canned_white">White beans</string>
    <string name="item_canned_t_cubes">Tomato cubes</string>
    <string name="item_canned_t_paste">Tomato paste</string>
    <string name="item_canned_gherkins">Pickled gherkins</string>
    <string name="item_canned_onions">Pickled onions</string>
    <string name="item_sauce_mustard">Mustard</string>
    <string name="item_frozen_battered">Battered fish</string>
    <string name="item_frozen_peas">Peas</string>
    <!-- note data -->
    <string name="note_bio" translatable="false">Bio</string>
    <string name="note_bio_fair_trade">Bio and fair trade</string>
    <!-- shop data -->
    <string name="shop_ah" translatable="false">Albert Heijn</string>
    <string name="shop_aldi" translatable="false">Aldi</string>
    <string name="shop_bio_planet" translatable="false">Bio-Planet</string>
    <string name="shop_carrefour" translatable="false">Carrefour</string>
    <string name="shop_colruyt" translatable="false">Colruyt</string>
    <string name="shop_delhaize" translatable="false">Delhaize</string>
    <string name="shop_lidl" translatable="false">Lidl</string>
    <string name="shop_okay" translatable="false">Okay</string>
    <string name="shop_spar" translatable="false">Spar</string>
</resources>
