<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <TextView
        android:id="@+id/tv_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_name"
        android:textSize="@dimen/text_size_l"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:paddingTop="@dimen/padding_default"
        android:paddingBottom="@dimen/padding_default"
        android:paddingStart="@dimen/padding_default"
        android:paddingLeft="@dimen/padding_default"
        android:paddingEnd="@dimen/padding_default"
        android:paddingRight="@dimen/padding_default"
        android:layout_marginTop="@dimen/margin_large"/>
    <ImageView
        android:id="@+id/iv_item_in_pantry"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:src="@drawable/ic_check_circle_complementary_900_24dp"
        android:contentDescription="@string/checkbox"
        app:layout_constraintTop_toTopOf="@id/tv_item_name"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_marginRight="@dimen/margin_large" />
    <TextView
        android:id="@+id/tv_label_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_category"
        app:layout_constraintTop_toBottomOf="@id/tv_item_name"
        android:paddingStart="@dimen/padding_default"
        android:paddingLeft="@dimen/padding_default"
        android:paddingEnd="@dimen/padding_default"
        android:paddingRight="@dimen/padding_default"
        android:layout_marginTop="@dimen/margin_large" />
    <TextView
        android:id="@+id/tv_item_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_category"
        app:layout_constraintTop_toTopOf="@id/tv_label_category"
        app:layout_constraintLeft_toRightOf="@id/tv_label_category"
        android:paddingStart="@dimen/padding_default"
        android:paddingLeft="@dimen/padding_default"
        android:paddingEnd="@dimen/padding_default"
        android:paddingRight="@dimen/padding_default" />
    <TextView
        android:id="@+id/tv_label_shop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_item_category"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/label_shop"
        android:paddingStart="@dimen/padding_default"
        android:paddingLeft="@dimen/padding_default"
        android:paddingEnd="@dimen/padding_default"
        android:paddingRight="@dimen/padding_default"
        android:layout_marginTop="@dimen/margin_large" />
    <TextView
        android:id="@+id/tv_item_shop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_shop"
        app:layout_constraintTop_toTopOf="@id/tv_label_shop"
        app:layout_constraintLeft_toLeftOf="@+id/tv_item_category"
        android:paddingStart="@dimen/padding_default"
        android:paddingLeft="@dimen/padding_default"
        android:paddingEnd="@dimen/padding_default"
        android:paddingRight="@dimen/padding_default" />
    <TextView
        android:id="@+id/tv_label_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_note"
        app:layout_constraintTop_toBottomOf="@id/tv_item_shop"
        app:layout_constraintLeft_toLeftOf="parent"
        android:paddingStart="@dimen/padding_default"
        android:paddingLeft="@dimen/padding_default"
        android:paddingEnd="@dimen/padding_default"
        android:paddingRight="@dimen/padding_default"
        android:layout_marginTop="@dimen/margin_large" />
    <TextView
        android:id="@+id/tv_item_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_note"
        app:layout_constraintTop_toTopOf="@id/tv_label_note"
        app:layout_constraintLeft_toLeftOf="@id/tv_item_category"
        android:paddingStart="@dimen/padding_default"
        android:paddingLeft="@dimen/padding_default"
        android:paddingEnd="@dimen/padding_default"
        android:paddingRight="@dimen/padding_default" />
    <Button
        android:id="@+id/btn_set_in_pantry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_in_pantry"
        android:drawableLeft="@drawable/ic_check_black_24dp"
        android:drawableStart="@drawable/ic_check_black_24dp"
        app:layout_constraintTop_toBottomOf="@id/tv_item_note"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/margin_large" />
    <Button
        android:id="@+id/btn_set_not_in_pantry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_not_in_pantry"
        android:drawableLeft="@drawable/ic_not_interested_black_24dp"
        android:drawableStart="@drawable/ic_not_interested_black_24dp"
        app:layout_constraintTop_toBottomOf="@id/tv_item_note"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/margin_large" />

</android.support.constraint.ConstraintLayout>