<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:padding="@dimen/widget_margin">

    <TextView
        android:id="@+id/aw_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_margin="8dp"
        android:contentDescription="@string/aw_title"
        android:text="@string/aw_title"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_xxl"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/aw_tv_overview_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/aw_tv_title"
        android:text="@string/aw_overview_label"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_m"
        android:padding="@dimen/widget_padding" />
    <ListView
        android:id="@+id/aw_lv_shops"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/aw_tv_overview_label" />
    <TextView
        android:id="@+id/aw_tv_empty_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/aw_tv_overview_label"
        android:text="@string/pantry_filled"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_m"
        android:padding="@dimen/widget_padding"/>

</RelativeLayout>